# ALL-stack-Agent-RAG-worktable

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agent/: config.py  runner.py
agent/exceptions/: custom_exception.py
agent/graph/: builder.py
agent/knowledge/: document_parser.py  loader.py  ocr_vlm.py  pdf_parser.py  schema.py  semantic_splitter.py  splitter.py  vectorstore.py
agent/llm/: llama_llm.py  llm_factory.py  openai_llm.py
agent/logger/: logger.py
agent/memory/: database.py
agent/nodes/: llm_node.py
agent/prompts/: system.py
agent/state/: agent_state.py
agent/tools/: arxiv_search.py  calculator.py  local_tools.py  web_search.py  wiki.py
backend/: main.py  routes.py  routes_conversation.py  routes_knowledge.py  schemas.py
frontend/: color-palettes-preview.html  index.html  package-lock.json  package.json  vite.config.js  workspace-layout-preview.html
frontend/src/: App.jsx  index.css
frontend/src/components/: Chat.jsx  Navbar.jsx  ToolPanel.jsx
frontend/src/pages/: ChatSection.jsx  Hero.jsx  KnowledgeSection.jsx
frontend/src/utils/: api.js
