[project]
name = "langgraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.4.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.4.0",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "jq>=1.10.0",
    "langchain>=1.2.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.6",
    "langchain-experimental>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.16",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.1.54",
    "langgraph-supervisor>=0.0.31",
    "langserve[all]>=0.3.3",
    "langsmith>=0.6.1",
    "matplotlib>=3.10.8",
    "msoffcrypto-tool>=5.4.2",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pinecone>=8.0.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "pypdf>=6.5.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "tavily-python>=0.7.17",
    "tiktoken>=0.12.0",
    "unstructured>=0.18.26",
    "uvicorn>=0.40.0",
    "wikipedia>=1.4.0",
]
